# helper-financeiro

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SidecarHF.spec  demo_agente.py  demo_saidas.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
Design/: Helper Financeiro App.dc.html  README.md
agent/: agente.py  cache.py  classificacao.py  config.py  exibicao.py  extracao.py  grafo.py  ingestao.py  ocr.py  prompts.py  provider.py  schemas.py  telemetria.py
contracts/: __init__.py  schemas.py
core/: calculos.py  diagnostico.py  documento.py  estrategias.py  extrato.py  extrator_pdf.py  models.py  rubricas.py  utils.py
docs/: AGENT.md  AUDITORIA-2026-07-03.html  CONSTITUTION.md  FREEZE.md  HARNESS.md  INDEX.md  PARIDADE.md  PLAN.md  PRD.md  RELATORIO-AUDITORIA.md  REVISAO-SEGURANCA.md  SEGURANCA-SHELL.md  SPEC.md  TASKS.md
docs/adr/: ADR-0001-deterministico-vs-llm.md  ADR-0002-provider-agnostico.md  ADR-0003-anonimizacao-guardrails.md  ADR-0004-camada-contracts.md  ADR-0005-structured-output.md  ADR-0006-langgraph-orquestrador.md  ADR-0007-llamaindex-ingestao.md  ADR-0008-perfil-orcamento-detalhado.md  ADR-0009-gui-web-electron-sidecar.md  ADR-0010-extracao-markdown-e-llm-local-openai.md  ADR-0011-recuperacao-com-feedback-e-redacao-deterministica.md  ADR-0012-rubricas-e-persistencia-sqlite.md  ADR-0013-historico-mensal-do-orcamento.md  ADR-0014-importacao-csv-evolucao-e-historico-no-xlsx.md  ADR-0015-ocr-de-documento-escaneado.md  ADR-0016-cofre-local-mfa-e-llm-embarcada.md  ADR-0017-ciclo-de-saude-de-codigo.md  ADR-0018-bump-electron-43.md  ADR-0019-ciclo-higiene-e-complexidade.md  ADR-0020-ciclo-build-release.md  ADR-0021-ciclo-code-signing.md  ADR-0022-ciclo-runtime-llm-configuravel.md  ADR-0023-checkpointers-duraveis-e-streaming-sse.md
exemplos/: exemplo_carta_quitacao.docx  exemplo_diagnostico.xlsx  exemplo_relatorio.docx
guardrails/: conteudo.py  pii.py  validador_numerico.py
gui/: app.py
gui_web/: .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.electron.json  vite.config.ts
gui_web/e2e/: analise-linha-do-tempo.spec.ts  analise-persistencia.spec.ts  app.spec.ts  cofre-helpers.ts  cofre.spec.ts  configuracao-ia-runtime.spec.ts  configuracao-ia.spec.ts  empacotado-llm.spec.ts  empacotado-update.spec.ts  empacotado.spec.ts
gui_web/e2e/fixtures/: fake-llama-server.py
gui_web/electron/: main.ts  preload.ts
gui_web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
gui_web/src/components/: CampoMoeda.tsx  CampoPercent.tsx  Icones.tsx
gui_web/src/hf/: client.ts  contract.ts  useAnalise.ts  useContadorEspera.ts
gui_web/src/lib/: arquivo.ts  format.ts  orcamento.ts
gui_web/src/screens/: Analise.tsx  Carta.tsx  ConfiguracaoIa.tsx  Contrato.tsx  Desbloqueio.tsx  Dividas.tsx  EmConstrucao.tsx  ImportarCsv.tsx  Onboarding.tsx  Perfil.tsx  Planilha.tsx  VisaoGeral.tsx
outputs/: planilha.py  proposta.py  relatorio.py
scripts/: bench_schema.py  build_assinado.ps1  diag_llm.py  preparar_cert_teste.ps1  preparar_llama.py  preparar_ocr.py  sidecar_entry.py
sidecar/: __init__.py  __main__.py  app.py  arquivos.py  auth.py  checkpoint_cofre.py  gestor_modelos.py  job_windows.py  persistencia.py  runtime_llm.py  schemas.py  security.py  sessao.py
tests/: conftest.py  test_analise_ultima.py  test_auth.py  test_cache.py  test_checkpoint_cofre.py  test_classificacao.py  test_config.py  test_conteudo.py  test_core.py  test_degradacao.py  test_documento.py  test_endurecimento_permissoes.py  test_exibicao.py  test_extracao.py  test_extrato.py  test_extrator_pdf.py  test_gestor_modelos.py  test_golden_outputs.py  test_grafo_stream.py  test_grounding.py  test_injecao.py  test_job_windows.py  test_ocr.py  test_ollama_real.py  test_orcamento.py  test_outputs.py  test_persistencia.py  test_pii.py  test_preparar_llama.py  test_propriedades.py  test_providers.py  test_recuperacao.py  test_rubricas.py  test_runtime_llm.py  test_sessao.py  test_sidecar.py  test_sidecar_llm.py  test_telemetria.py  test_validacao_texto.py
tests/golden/: planilha_atencao.json  planilha_atencao_evolucao.json  planilha_atencao_rubricas.json  planilha_saudavel_sem_dividas.json  relatorio_atencao.json  relatorio_atencao_com_ia.json  relatorio_critico_deficit.json  relatorio_saudavel_sem_dividas.json  relatorio_saudavel_sem_portabilidade.json
