[project]
name = "helper-financeiro"
version = "2.0.0"
description = "Diagnóstico de dívidas com estratégias de quitação, saídas em xlsx/docx e agente financeiro (LLM) sob guardrails"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "openpyxl>=3.1",      # planilha .xlsx com fórmulas e gráfico
    "python-docx>=1.1",   # relatório e cartas .docx
    "pdfplumber>=0.11",   # extração de texto de contratos PDF (fallback MIT)
    "pymupdf4llm>=0.0.17",  # PDF -> Markdown p/ a LLM de extração (ADR-0010; AGPL, uso não-comercial)
    "pydantic>=2.0",      # contratos tipados determinístico ↔ agente (v2)
    "langgraph>=1.2.7",                      # orquestração em grafo + interrupt (ADR-0006)
    "llama-index-core>=0.14.23",             # ingestão/retrieval local (ADR-0007)
    "llama-index-embeddings-ollama>=0.9.0",  # embeddings via Ollama, sem torch (ADR-0007)
    "llama-index-readers-file>=0.6.0",       # leitura de PDF/docx na ingestão
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "hypothesis>=6.100",
    "httpx>=0.28.1",
]
# Empacotamento (T-1001): congela o sidecar p/ o electron-builder embarcar.
# Rodar: uv run --group build pyinstaller SidecarHF.spec --noconfirm
build = [
    "pyinstaller>=6.0",
]

# ---------------------------------------------------------------- ruff
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplificações
]
ignore = [
    "E501",     # linhas longas: o formatador cuida; docstrings pedagógicas ficam livres
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM"]  # clareza > concisão em testes

# ---------------------------------------------------------------- mypy
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
# GUI tkinter tem tipagem dinâmica pesada; endurecer na Fase 3 (AppController)
[[tool.mypy.overrides]]
module = ["pdfplumber.*", "openpyxl.*", "docx.*", "llama_index.*",
          "pymupdf.*", "pymupdf4llm.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------- pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "judge: avaliação LLM-as-judge (requer provider real; fora do gate bloqueante)",
    "ollama: integração com Ollama local (fora do gate bloqueante)",
]

# ---------------------------------------------------------------- coverage
[tool.coverage.run]
source = ["core", "agent", "guardrails", "outputs", "contracts"]
# gui/ fica fora da medição até existir AppController testável (Fase 3, F-08)
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
precision = 1
