[project]
name = "helper-financeiro"
version = "2.10.0"
description = "Diagnóstico de dívidas com estratégias de quitação, saídas em xlsx/docx e agente financeiro (LLM) sob guardrails"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "openpyxl>=3.1",      # planilha .xlsx com fórmulas e gráfico
    "python-docx>=1.1",   # relatório e cartas .docx
    "pdfplumber>=0.11",   # extração de texto de contratos PDF (fallback MIT)
    "pymupdf4llm>=0.0.17",  # PDF -> Markdown p/ a LLM de extração (ADR-0010; AGPL, uso não-comercial)
    "pydantic>=2.0",      # contratos tipados determinístico ↔ agente (v2)
    "langgraph>=1.2.7",                      # orquestração em grafo + interrupt (ADR-0006)
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
    "rapidocr>=3.9.1",   # OCR local: PaddleOCR PP-OCRv6 em ONNX (ADR-0015; H2/H7)
    "onnxruntime>=1.27.0",  # runtime de inferência do rapidocr (CPU, sem nuvem)
    "argon2-cffi>=25.1.0",  # KDF Argon2id da KEK do cofre (ADR-0016, REQ-SEC-006)
    "cryptography>=49.0.0",  # AES-GCM (envelope DEK/KEK) + HKDF (códigos de recuperação)
    "pyotp>=2.10.0",  # TOTP offline (2º fator, REQ-SEC-005; QR renderizado só na GUI, T-1604)
    "sqlcipher3-wheels>=0.5.7",  # banco cifrado SQLCipher (AES-256) via import sqlcipher3 (ADR-0016 §B, REQ-SEC-006); wheel com binário nativo p/ Windows/Py3.12 — empacotar no PyInstaller é o T-1703
    "qrcode[png]>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "hypothesis>=6.100",
    "httpx>=0.28.1",
    "types-qrcode>=8.2.0.20260518",
]
# Empacotamento (T-1001): congela o sidecar p/ o electron-builder embarcar.
# Rodar: uv run --group build pyinstaller SidecarHF.spec --noconfirm
build = [
    "pyinstaller>=6.0",
]

# ---------------------------------------------------------------- ruff
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplificações
]
ignore = [
    "E501",     # linhas longas: o formatador cuida; docstrings pedagógicas ficam livres
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM"]  # clareza > concisão em testes

# ---------------------------------------------------------------- mypy
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
# GUI tkinter tem tipagem dinâmica pesada; endurecer na Fase 3 (AppController)
[[tool.mypy.overrides]]
module = ["pdfplumber.*", "openpyxl.*", "docx.*",
          "pymupdf.*", "pymupdf4llm.*", "rapidocr.*", "onnxruntime.*", "cv2.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------- pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "judge: avaliação LLM-as-judge (requer provider real; fora do gate bloqueante)",
    "ollama: integração com Ollama local (fora do gate bloqueante)",
]

# ---------------------------------------------------------------- coverage
[tool.coverage.run]
source = ["core", "agent", "guardrails", "outputs", "contracts", "sidecar"]
# gui/ fica fora da medição até existir AppController testável (Fase 3, F-08).
# sidecar/__main__.py também fica fora (C-05): é o launcher de processo real
# (porta efêmera + `uvicorn.Server.run()` bloqueante) — testá-lo de verdade
# exigiria subir um processo/servidor real, não um teste de fumaça isolado. O
# restante do pacote sidecar/ (app.py, gestor_modelos.py, runtime_llm.py etc.)
# já é coberto pelos testes existentes e agora entra na medição.
omit = ["*/__init__.py", "sidecar/__main__.py"]

[tool.coverage.report]
show_missing = true
precision = 1
