[project]
name = "helper-financeiro"
version = "2.14.0"
description = "Diagnóstico de dívidas com estratégias de quitação, saídas em xlsx/docx e agente financeiro (LLM) sob guardrails"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "openpyxl>=3.1",      # planilha .xlsx com fórmulas e gráfico
    "python-docx>=1.1",   # relatório e cartas .docx
    "pdfplumber>=0.11",   # extração de texto de contratos PDF (fallback MIT)
    "pymupdf4llm>=0.0.17",  # PDF -> Markdown p/ a LLM de extração (ADR-0010; AGPL, uso não-comercial)
    "pydantic>=2.0",      # contratos tipados determinístico ↔ agente (v2)
    "langgraph>=1.2.7",                      # orquestração em grafo + interrupt (ADR-0006)
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
    "rapidocr>=3.9.1",   # OCR local: PaddleOCR PP-OCRv6 em ONNX (ADR-0015; H2/H7)
    "onnxruntime>=1.27.0",  # runtime de inferência do rapidocr (CPU, sem nuvem)
    "argon2-cffi>=25.1.0",  # KDF Argon2id da KEK do cofre (ADR-0016, REQ-SEC-006)
    "cryptography>=49.0.0",  # AES-GCM (envelope DEK/KEK) + HKDF (códigos de recuperação)
    "pyotp>=2.10.0",  # TOTP offline (2º fator, REQ-SEC-005; QR renderizado só na GUI, T-1604)
    "sqlcipher3-wheels>=0.5.7",  # banco cifrado SQLCipher (AES-256) via import sqlcipher3 (ADR-0016 §B, REQ-SEC-006); wheel com binário nativo p/ Windows/Py3.12 — empacotar no PyInstaller é o T-1703
    "qrcode[png]>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "hypothesis>=6.100",
    "httpx>=0.28.1",
    "types-qrcode>=8.2.0.20260518",
]
# Empacotamento (T-1001): congela o sidecar p/ o electron-builder embarcar.
# Rodar: uv run --group build pyinstaller SidecarHF.spec --noconfirm
build = [
    "pyinstaller>=6.0",
]

# ---------------------------------------------------------------- ruff
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplificações
    "C901",     # complexidade ciclomática — catraca do T-2204 (ADR-0019)
]
ignore = [
    "E501",     # linhas longas: o formatador cuida; docstrings pedagógicas ficam livres
]

[tool.ruff.lint.mccabe]
# Catraca de complexidade (C-28/C-29, ADR-0019): o teto é o PIOR caso existente
# no fechamento do v2.11 (`gui/app.py:_extrair_pdf` = 13, casca tkinter
# congelada) — impede crescer, não pune o legado. Mesma filosofia do piso de
# cobertura: recalibração futura SÓ para baixo (função nova acima do teto é
# regressão, não motivo de afrouxar). Referência pós-refatoração:
# `gerar_relatorio` = 3, `_aba_evolucao` = 2, `baixar_modelo` = 2.
max-complexity = 13

[tool.ruff.lint.per-file-ignores]
# clareza > concisão em testes; ARG001 (C-35): fixtures pytest (ex.: `repo_tmp`)
# e stubs/fakes que imitam a assinatura de um provider real são
# estruturalmente "não usados" — o valor está em existir, não em ser lido.
# Suprimir arquivo a arquivo evitaria dezenas de `noqa` quase idênticos.
"tests/*" = ["SIM", "ARG001"]
# S608 (C-35): as duas ocorrências (contagem de linhas por tabela, migração)
# interpolam nomes de tabela vindos de uma tupla fixa no próprio módulo
# (`_TABELAS_MIGRACAO`), nunca de entrada externa — falso positivo do S608.
# Arquivo fora do escopo de edição desta task (outra task mexe nele agora);
# suprimido aqui em vez de tocar `sidecar/persistencia.py`.
"sidecar/persistencia.py" = ["S608"]

# ---------------------------------------------------------------- mypy
[tool.mypy]
python_version = "3.12"
# Hotfix v2.12.1 (ADR-0020): o mypy é sensível à plataforma e o CI roda em
# Linux — `ctypes.WinDLL`/`get_last_error` (sidecar/job_windows.py, T-1902)
# não existem nos stubs de lá, o que manteve o Gate A vermelho por 4 ciclos
# sem ninguém notar (portões locais rodam no Windows). O produto é
# Windows-first (o ramo POSIX do cofre é dormente e só usa os.chmod, que
# existe em ambos os stubs) — checar como win32 em qualquer host é o
# comportamento correto.
platform = "win32"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
# GUI tkinter tem tipagem dinâmica pesada; endurecer na Fase 3 (AppController)
[[tool.mypy.overrides]]
module = ["pdfplumber.*", "openpyxl.*", "docx.*",
          "pymupdf.*", "pymupdf4llm.*", "rapidocr.*", "onnxruntime.*", "cv2.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------- pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "judge: avaliação LLM-as-judge (requer provider real; fora do gate bloqueante)",
    "ollama: integração com Ollama local (fora do gate bloqueante)",
]

# ---------------------------------------------------------------- coverage
[tool.coverage.run]
source = ["core", "agent", "guardrails", "outputs", "contracts", "sidecar"]
# gui/ fica fora da medição até existir AppController testável (Fase 3, F-08).
# sidecar/__main__.py também fica fora (C-05): é o launcher de processo real
# (porta efêmera + `uvicorn.Server.run()` bloqueante) — testá-lo de verdade
# exigiria subir um processo/servidor real, não um teste de fumaça isolado. O
# restante do pacote sidecar/ (app.py, gestor_modelos.py, runtime_llm.py etc.)
# já é coberto pelos testes existentes e agora entra na medição.
omit = ["*/__init__.py", "sidecar/__main__.py"]

[tool.coverage.report]
show_missing = true
precision = 1
